--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,6 +2,7 @@ main {
     background-color: ;
    
 }
+
 .carousel-cover {
   display: block;
   width: 100%;
@@ -140,19 +141,25 @@ footer .col {
   transform: translateY(-50%);
   transition: transform calc(var(--d) * 2) var(--e);
 }
-/*.card:nth-child(1):before {
-  background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
+.card:nth-child(1):before {
+  background-image: url(../static/imgs/AR.jpg)}
 .card:nth-child(2):before {
-  background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+    background-image: url(../static/imgs/beach.jpg)
 }
 .card:nth-child(3):before {
-  background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+    background-image: url(../static/imgs/nightlife.jpg)
 }
 .card:nth-child(4):before {
-  background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+    background-image: url(../static/imgs/yoga.jpg)
 }
-*/
+.card:nth-child():before {
+    background-image: url(../static/imgs/super.jpg)
+}
+.card:nth-child(6):before {
+    background-image: url(../static/imgs/super.jpg)
+}
+
+
 
 .content {
   position: relative;
