--- a/public/css/home.css
+++ b/public/css/home.css
@@ -152,13 +152,30 @@ footer .col {
 .card:nth-child(4):before {
     background-image: url(../static/imgs/yoga.jpg)
 }
-.card:nth-child():before {
-    background-image: url(../static/imgs/super.jpg)
+.card:nth-child(5):before {
+    background-image: url(../static/imgs/adventure.jpg)
 }
 .card:nth-child(6):before {
     background-image: url(../static/imgs/super.jpg)
 }
-
+.card:nth-child(7):before {
+    background-image: url(../static/imgs/retreat.jpg)
+}
+.card:nth-child(8):before {
+    background-image: url(../static/imgs/cultural.jpg)
+}
+.card:nth-child(9):before {
+    background-image: url(../static/imgs/sunset.jpg)
+}
+.card:nth-child(10):before {
+    background-image: url(../static/imgs/safari.jpg)
+}
+.card:nth-child(11):before {
+    background-image: url(../static/imgs/spa.jpg)
+}
+.card:nth-child(12):before {
+    background-image: url(../static/imgs/tour.jpg)
+}
 
 
 .content {
